BMI calculator finished

--- a/bmi.html
+++ b/bmi.html
@@ -22,7 +22,7 @@
             <input class="form-control" type="number" name="weight" placeholder="Your weight (in kg)" required>
             <div class="invalid-feedback">Don't cheet - your weight in kg, please!</div>
             <label for="height">Your height in m:</label>
-            <input class="form-control" type="number" name="height" placeholder="Your height (in m)" required>
+            <input class="form-control" type="number" step="0.01"  name="height" placeholder="Your height (in m)" required>
             <div class="invalid-feedback">Your height (in meter!)</div>
           </div>
           <button class="btn btn-primary btn-lg btn-block mt-4" type="submit">Calculate your BMI</button>
